# historian-bridge

./: .dockerignore  .gitignore  ARCH.md  CLEANROOM.md  LICENSE  NOTICE.md  README.md  START_HERE.md  bundle.json  pnpm-lock.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.history/: Dockerfile_20260429145103  docker-compose_20260429145105.yaml  package_20260429145034.json  package_20260429145056.json  tsconfig_20260429145034.json  tsconfig_20260429145056.json  vitest.config_20260429150215.ts  vitest.config_20260429150232.ts  vitest.config_20260429150245.ts  vitest.config_20260429150345.ts
.history/examples/grafana/: README_20260429145103.md  datasource_20260429145103.yaml
.history/src/: client_20260429150430.ts  errors_20260429150611.ts  index_20260429145056.ts
.history/src/historian_bridge/: __init___20260429144933.py  __main___20260429144552.py  aggregate_20260429144552.py  errors_20260429144552.py  factory_20260429144537.py  routes_20260429144538.py
.history/tests/: client.test_20260429145020.ts  client.test_20260429145056.ts  client.test_20260429150314.ts  conftest_20260429144845.py  test_aggregate_20260429144845.py  test_factory_20260429144845.py  test_gateway_inmemory_20260429144845.py  test_gateway_inmemory_20260429144924.py
docs/: landing.md  outreach.md  validation.md  why.md
examples/: seed_demo.py  wedge_demo.sh
examples/docker/: Dockerfile  docker-compose.yaml
examples/grafana/: datasource.yaml
kb/: INDEX.md  QUERIES.md
scripts/: build_binary.sh  historianbridge.spec  historianbridge_entry.py
src/: client.ts  url.ts
src/historian_bridge/: __main__.py  cli.py  config.py  demo.py  gateway.py  routes.py
tests/: client.test.ts  conftest.py  test_cli.py  test_factory.py  test_gateway_inmemory.py  test_influx_parity.py
